[package]
name = "lesser"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
regex = "1.11.1"
clap = { version = "4.5.41", features = ["derive"] }
notify = "8.2.0"
glob = "0.3.3"

# Copied from https://github.com/sigoden/aichat/pull/264
[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
